--- a/src/main/resources/lang/installer.properties
+++ b/src/main/resources/lang/installer.properties
@@ -1,3 +1,9 @@
-installer.info=Info
+installer.prompt.game.version=Minecraft Version:
+installer.prompt.select.location=Select Install Location:
 installer.button.install=Install
+installer.exception.no.launcher.directory=No launcher directory found!
+installer.prompt.launcher.type.body=The Combat Test Installer has detected 2 different installations of the Minecraft Launcher, which launcher do you wish to install Fabric to?\n\n- Select Microsoft Store if you are playing Minecraft through the Xbox App or the Windows Store.\n- Select Standalone if you downloaded the Minecraft launcher directly from the Minecraft.net website.\n\nIf you are unsure try the Microsoft Store option first, you can always re-run the installer.
+installer.prompt.launcher.type.xbox=Microsoft Store / Xbox
+installer.prompt.launcher.type.win32=Standalone (Win32)
 installer.title=Combat Test Installer
+installer.option.create.profile=Create profile
