i think its basically done now!

--- a/src/main/resources/lang/installer.properties
+++ b/src/main/resources/lang/installer.properties
@@ -10,6 +10,8 @@ installer.prompt.launcher.type.win32=Standalone (Win32)
 installer.title=Combat Test Installer
 installer.option.create.profile=Create profile
 
+installer.prompt.install.error=An error has occurred, click "OK" to restart the program or click "Cancel" to continue.
+
 installer.button.fabric=Open the Fabric Installer
 installer.tab.vanilla=Vanilla
 installer.tab.fabric=Fabric
